Revert "Revert "Revert "fix: safari z-index problem"""
This reverts commit d5c0b6585d2f14e7243bbf27f8af9fc58cc2f4d2.

--- a/packages/webgal/src/Components/UI/Extra/extra.module.scss
+++ b/packages/webgal/src/Components/UI/Extra/extra.module.scss
@@ -5,7 +5,6 @@
   top: 0;
   left: 0;
   z-index: 14;
-  transform: translateZ(14px);
   background-image: linear-gradient(135deg, #93a5cf 0%, #e4efe9 100%);;
   padding: 2em 2em 2em 2em;
   box-sizing: border-box;
